--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.12.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
