--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "fibers": "^4.0.1",
     "node-sass": "^4.12.0",
     "vue": "^2.6.10",
