--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "axios-auth-refresh": "^1.0.7",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.12.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
