--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-radial-progress": "^0.2.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-slider-component": "^3.0.41"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
